--- a/ElevenNote2.Services/ElevenNote2.Services.csproj
+++ b/ElevenNote2.Services/ElevenNote2.Services.csproj
@@ -1,5 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\ElevenNote2.Models\ElevenNote2.Models.csproj" />
+    <ProjectReference Include="..\ElevenNote2.Data\ElevenNote2.Data.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
