--- a/ElevenNote2.Services/ElevenNote2.Services.csproj
+++ b/ElevenNote2.Services/ElevenNote2.Services.csproj
@@ -5,6 +5,10 @@
     <ProjectReference Include="..\ElevenNote2.Data\ElevenNote2.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.6" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
